@@ -50,7 +50,7 @@ sh_register_info (Ebl *ebl __attribute__ ((unused)),
   if (regno < 0 || regno > 103 || namelen < 6)
     return -1;
 
-  *prefix = NULL;
+  *prefix = "";
   *bits = 32;
   *type = DW_ATE_signed;
 
